--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,35 +9,44 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
+    <ListView
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="80dp"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:id="@+id/messages_view"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
         <LinearLayout
             android:id="@+id/input_bar"
             android:layout_width="fill_parent"
-            android:layout_height="75dp"
+            android:layout_height="30dp"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal" >
 
         </LinearLayout>
 
-    <Button
-        android:id="@+id/send_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sendbutton"
-        android:layout_marginBottom="92dp"
-        android:layout_above="@+id/input_bar"
-        android:layout_centerHorizontal="true" />
+    <!--<Button-->
+        <!--android:id="@+id/send_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/sendbutton"-->
+        <!--android:layout_marginBottom="92dp"-->
+        <!--android:layout_above="@+id/input_bar"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
     <EditText
         android:id="@+id/message_input"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:inputType="text"
         android:layout_gravity="bottom|left"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/send_button" />
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
