Hits heroku server but doesn't trigger pusher

--- a/app/src/main/res/layout/activity_get_twitter_name.xml
+++ b/app/src/main/res/layout/activity_get_twitter_name.xml
@@ -7,37 +7,46 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="app.com.lentusignavusdevelopment.angaras.GetTwitterNameActivity">
 
+<TextView
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/info_about_server"
+    android:id="@+id/info_about_server"/>
+
+   <TextView
+       android:layout_width="fill_parent"
+       android:layout_height="wrap_content"
+       android:text="@string/channel_name"
+       android:id="@+id/enterChannelText"
+       android:layout_below="@+id/info_about_server"
+       android:layout_marginTop="20dp"/>
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editChannelName"
+        android:inputType="text"
+        android:layout_below="@+id/enterChannelText"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/enter_name"
+        android:layout_below="@+id/editChannelName"
+        android:id="@+id/enterNameText"/>
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTwitterName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="78dp"
-        android:theme="@style/Widget.Design.TextInputLayout" />
+        android:layout_below="@+id/enterNameText"
+        android:inputType="text" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/submit_name"
-        android:id="@+id/button_submit_name"
-        android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/editTwitterName"
-        android:layout_alignEnd="@+id/editTwitterName"
+        android:text="@string/submit_info"
+        android:id="@+id/submit_button"
+        android:layout_below="@+id/editTwitterName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Enter Name:"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editTwitterName"
-        android:layout_alignEnd="@+id/editTwitterName" />
 
 </RelativeLayout>
